changing block update